[B]Version 0.0.7[/B]
- Fix non-live video playback / Video aadresside leidmise parandus by tambeti
[B]Version 0.0.6[/B]
- fix live streaming in case of multiple streams / mitme otseülekande aadressi leidmise parandus
[B]Version 0.0.5[/B]
- fix live streaming / otseülekannete aadresside leidmise parandus by tambeti
- replace + with spaces in live event url / otseülekande nimes asendatud + märgid tühikutega
[B]Version 0.0.4[/B]
- fix live streaming / otseülekannete aadresside leidmise parandus
[B]Version 0.0.3[/B]
- Support for new tv.delfi.ee / tv.delfi.ee tugi
- Known issue: LV & LT delfi support is broken :( / delfi LV ja LT tugi katki :(
- Fixed first run connection error / Esimesel käivitusel ei tule enam võrguühenduse viga 
- Support for XBMC 13 Gotham / XBMC 13 Gothami tugi
[B]Version 0.0.2[/B]
- Support multiple live setreams / Mitme Live TV voo tugi
- Unicode error messages / Unicode veateated
- Fixed video name in Now Playing list / Hetkel mängib nimekirjas näidatakse vide õiget nime
[B]Version 0.0.1[/B]
- Initial release / Esmane väljalase