@@ -4,7 +4,9 @@
     <string id="201">The error message is:</string>
     <string id="202">Probably no Live TV at the moment.</string>
     <string id="30005">Failed to detect stream url.</string>
-    <string id="30006">L!VE recordings</string>
+    <string id="30006">LIVE recordings</string>
+    <string id="30007">LIVE</string>
+    <string id="30008">Next</string>
     <!-- settings -->
     <string id="30002">General</string>
     <string id="30003">Portal</string>
