@@ -4,7 +4,9 @@
     <string id="201">Veateade:</string>
     <string id="202">Ilmselt pole praegu ühtegi Live ülekannet.</string>
     <string id="30005">Voo aadressi leidmine nurjus.</string>
-    <string id="30006">L!VE salvestused</string>
+    <string id="30006">Ülekannete salvestused</string>
+    <string id="30007">Ülekanded</string>
+    <string id="30008">Järgmised</string>
     <!-- seaded -->
     <string id="30002">Üldine</string>
     <string id="30003">Portaal</string>
