@@ -1,3 +1,7 @@
+[B]Version 0.0.8[/B]
+- Fix non-live video playback / Video aadresside leidmise parandus
+- Code cleanup, removed some lt and lv related code / Koodi puhastus, eemaldasin lt lv koodi
+- Pagination support / Lehekülgede kaupa navigeerimise tugi (võimalus vaadata vanemaid saateid)
 [B]Version 0.0.7[/B]
 - Fix non-live video playback / Video aadresside leidmise parandus by tambeti
 [B]Version 0.0.6[/B]
